[package]
name = "electron_globkey"
version = "1.0.51"
authors = ["Isaac Mills <rooster0055@protonmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
node-bindgen = { version = "4.0" }
once_cell = "*"
parking_lot = "*"
rayon = "*"
stoppable_thread = "*"

[target.'cfg(not(windows))'.dependencies]
device_query = "*"

[target.'cfg(windows)'.dependencies]
inputbot = "*"

[build-dependencies]
node-bindgen = { version = "4.0", features = ["build"] }
