[package]
name = "electron_globkey"
version = "1.0.53"
authors = ["Isaac Mills <rooster0055@protonmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
node-bindgen = { version = "4.0" }
once_cell = "*"
parking_lot = "*"
rayon = "*"
stoppable_thread = "*"
device_query = { version = "*", path = "device_query" }

[build-dependencies]
node-bindgen = { version = "4.0", features = ["build"] }
