[package]
name = "electron_globkey"
version = "1.0.62"
authors = ["Isaac Mills <rooster0055@protonmail.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
node-bindgen = { version = "4.0" }
once_cell = "*"
parking_lot = "*"
rayon = "*"
stoppable_thread = "*"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "hidusage"] }

[build-dependencies]
node-bindgen = { version = "4.0", features = ["build"] }
